New theme: mocha

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -23,7 +23,7 @@
 set column_ratios 5, 2
 
 # Which files should be hidden? (regular expression)
-set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp|srt)$|^lost\+found$|^__(py)?cache__$
+set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp|srt|aux|log|toc)$|Bureau|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
 set show_hidden false
@@ -54,7 +54,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow
-set colorscheme caviar
+set colorscheme mocha
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
