New full-time tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,19 @@
 #Basics
+set-window-option -g utf8 on
 unbind C-b
 set -g prefix C-a
 set -g mode-keys vi
 set -g status-keys vi
 set -g default-terminal "screen-256color"
+set -g history-limit 500
+set -g base-index 1
+set -g pane-base-index 1
+set-option escape-time 0
+setw -g aggressive-resize on
 
 ## Binds
+bind z send-prefix
+bind C-z send-prefix
 
 unbind c
 bind c new-window
@@ -22,9 +30,6 @@ bind C-x kill-pane
 unbind l
 bind C-a last-window
 
-unbind C-b
-bind a send-prefix
-
 unbind n
 bind n next-window
 bind C-n next-window
@@ -35,9 +40,7 @@ bind C-p previous-window
 
 unbind d
 bind d detach
-bind C-d detach
 
-set-option escape-time 0
 unbind [
 bind Escape copy-mode
 
@@ -48,51 +51,61 @@ unbind "'"
 bind e split-window -v
 bind C-e split-window -v
 
+bind C-b kill-server
+bind C-d kill-session -a
+bind r source-file ~/.tmux.conf
+bind w choose-window
+bind s choose-session
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
 
 bind ^h resize-pane -L
 bind ^j resize-pane -D
 bind ^k resize-pane -U
 bind ^l resize-pane -R
 
-bind / command-prompt "split-window 'exec man %%'"
+bind ',' rotate-window
 
+bind : command-prompt "split-window 'exec man %%'"
+bind '~' split-window "exec htop"
+bind '/' split-window "exec su -"
+bind '$' split-window "exec wcalc"
+bind '!' new-window "exec ssh -p 7210 logan@192.168.1.76"
+bind '*' break-pane
 
-# Mouse control
-
-# Status Bar
-set -g status-bg default
-set -g status-fg cyan
-set -g status-interval 4
-set -g status-left ''
-set -g status-right ''
-set -g status-justify centre
-
-# Set window split options
-set-option -g pane-active-border-fg white
-set-option -g pane-active-border-bg default
+# Panes options
+set -g mouse-select-pane on
+set-option -g pane-active-border-fg brightwhite
+set-option -g pane-active-border-bg brightyellow
 set-option -g pane-border-fg black
-set-option -g pane-border-bg default
+set-option -g pane-border-bg brightyellow
 
-# Highlighting the active window in status bar
-setw -g window-status-current-bg default
-setw -g window-status-current-fg default
-setw -g window-status-bg default
-setw -g window-status-fg white
-setw -g window-status-activity-attr blink
-setw -g window-status-activity-bg default
-setw -g window-status-activity-fg default
-setw -g window-status-bell-attr blink
-setw -g window-status-bell-bg default
-setw -g window-status-bell-fg default
-setw -g window-status-format '#[fg=black] ~ '
-setw -g window-status-current-format '#[fg=white,bold] ~ '
+# Message
+set-window-option -g mode-bg brightwhite
+set-window-option -g mode-fg brightyellow
+set -g message-fg brightwhite
+set -g message-bg red
+set -g message-command-fg brightwhite
+set -g message-command-bg brightyellow
 
-# Shhhhhh
+# Silent mode
 setw -g monitor-activity off
 setw -g monitor-content off
 set -g visual-activity off 
+
+# Terminal emulator window title
+setw -g automatic-rename on
+set-option -g set-titles on
+set-option -g set-titles-string 'tmux > #W'
+
+# # Status Bar
+set -g status-interval 60
+set -g status-bg brightyellow
+set -g window-status-format "#[fg=white] #I #{pane_current_command} "
+set -g window-status-current-format "#[fg=white,bold,bg=black] #I #{pane_current_command} "
+set-option -g status-right '#[fg=white,bold,bg=black] %H:%M #[bg=brightyellow] '
+set-option -g status-left ' '
+set -g status-justify left
