New apps bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-#Basics
+# Basics
 set-window-option -g utf8 on
 unbind C-b
 set -g prefix C-a
@@ -53,7 +53,7 @@ bind C-e split-window -v
 
 bind C-b kill-server
 bind C-d kill-session -a
-bind r source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf
 bind w choose-window
 bind s choose-session
 
@@ -69,10 +69,15 @@ bind ^l resize-pane -R
 
 bind ',' rotate-window
 
-bind : command-prompt "split-window 'exec man %%'"
+bind . command-prompt "split-window 'exec man %%'"
+bind : command-prompt "split-window 'exec %%'"
 bind '~' split-window "exec htop"
 bind '/' split-window "exec su -"
 bind '$' split-window "exec wcalc"
+bind f new-window "exec ranger"
+bind v new-window "exec weechat"
+bind r new-window "exec rtorrent"
+bind m new-window "exec ncmpcpp"
 bind '!' new-window "exec ssh -p 7210 logan@192.168.1.76"
 bind '*' break-pane
 
